--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
             <ul id="lista-pedido" class="list-group">
                 <!-- Itens selecionados vão aparecer aqui -->
             </ul>
+            <div class="form-group">
+                <label for="nomeCliente">Nome do Cliente:</label>
+                <input type="text" id="nomeCliente" class="form-control w-50" placeholder="Digite seu nome" required>
+            </div>
+
+            <div class="form-group">
+                <label for="numeroMesa">Número da Mesa:</label>
+                <input type="text" id="numeroMesa" class="form-control w-50" placeholder="Digite o número da mesa" required>
+            </div>
+
             <button class="btn btn-primary mt-3" onclick="enviarPedido()">Enviar Pedido</button>
         </div>
     </div>
