alterado numero de telefone

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <div class="form-group">
                 <label for="numeroMesa">Número da Mesa:</label>
-                <input type="text" id="numeroMesa" class="form-control w-50" placeholder="Digite o número da mesa" required>
+                <input type="text" id="numeroMesa" class="form-control w-50" placeholder="Número da mesa" required>
             </div>
 
             <button class="btn btn-primary mt-3" onclick="enviarPedido()">Enviar Pedido</button>
