algumas partes ja finalizadas

--- a/index.html
+++ b/index.html
@@ -4,33 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardápio do Restaurante</title>
+    <link rel="stylesheet" href="styles.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container mt-5">
         <h1 class="text-center">Cardápio do Restaurante</h1>
+
+        <!-- Botões de categorias -->
+        <div class="text-center mb-4">
+            <button class="btn btn-primary mx-1" class onclick="filtrarCategoria('Petiscos')">Petiscos</button>
+            <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Caldo')">Caldo</button>
+            <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Lanche')">Lanche</button>
+            <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Bebidas')">Bebidas</button>
+            <button class="btn btn-secondary mx-1" onclick="filtrarCategoria('')">Mostrar Todos</button>
+        </div>
+
         <div id="menu" class="row mt-4">
             <!-- Itens do cardápio irão aqui -->
         </div>
-        <div id="pedido" class="mt-5">
-            <h3>Seu Pedido</h3>
-            <ul id="lista-pedido" class="list-group">
-                <!-- Itens selecionados vão aparecer aqui -->
-            </ul>
-            <div class="form-group">
-                <label for="nomeCliente">Nome do Cliente:</label>
-                <input type="text" id="nomeCliente" class="form-control w-50" placeholder="Digite seu nome" required>
-            </div>
-
-            <div class="form-group">
-                <label for="numeroMesa">Número da Mesa:</label>
-                <input type="text" id="numeroMesa" class="form-control w-50" placeholder="Número da mesa" required>
-            </div>
-
-            <button class="btn btn-primary mt-3" onclick="enviarPedido()">Enviar Pedido</button>
-        </div>
-    </div>
+        
+        <!-- Seção de pedidos -->
+       <!-- Seção de pedidos -->
+        <!-- Seção de pedidos -->
+<div id="pedido" class="mt-5">
+    <h3>Seu Pedido</h3>
+    <ul id="lista-pedido" class="list-group">
+        <!-- Itens selecionados vão aparecer aqui -->
+    </ul>
     
+    <!-- Campo para o nome do cliente e número da mesa em formato vertical -->
+    <div class="form-group mt-3">
+        <label for="nomeCliente">Cliente:</label>
+        <input type="text" id="nomeCliente" class="form-control" placeholder="Digite seu nome" required>
+    </div>
+
+    <div class="form-group">
+        <label for="numeroMesa">Mesa:</label>
+        <input type="text" id="numeroMesa" class="form-control" placeholder="Digite o número da mesa" required>
+    </div>
+
+    <button class="btn btn-primary mt-3" onclick="enviarPedido()">Enviar Pedido</button>
+</div>
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
