--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <!-- Botões de categorias -->
         <div class="text-center mb-4">
-            <button class="btn btn-primary mx-1" class onclick="filtrarCategoria('Petiscos')">Petiscos</button>
+            <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Petiscos')">Petiscos</button>
             <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Caldo')">Caldo</button>
             <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Lanche')">Lanche</button>
             <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Bebidas')">Bebidas</button>
