--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Caldo')">Caldo</button>
             <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Lanche')">Lanche</button>
             <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Bebidas')">Bebidas</button>
+            <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Espetinhos')">Espetinhos</button>
+            <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Refrigerantes')">Refrigerantes</button>
+            <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Combos')">Combos</button>
+            <button class="btn btn-primary mx-1" onclick="filtrarCategoria('Destiladas')">Destiladas</button>
             <button class="btn btn-secondary mx-1" onclick="filtrarCategoria('')">Mostrar Todos</button>
         </div>
 
@@ -25,28 +29,25 @@
         </div>
         
         <!-- Seção de pedidos -->
-       <!-- Seção de pedidos -->
-        <!-- Seção de pedidos -->
-<div id="pedido" class="mt-5">
-    <h3>Seu Pedido</h3>
-    <ul id="lista-pedido" class="list-group">
-        <!-- Itens selecionados vão aparecer aqui -->
-    </ul>
+        <div id="pedido" class="mt-5">
+            <h3>Seu Pedido</h3>
+            <ul id="lista-pedido" class="list-group">
+                <!-- Itens selecionados vão aparecer aqui -->
+            </ul>
     
-    <!-- Campo para o nome do cliente e número da mesa em formato vertical -->
-    <div class="form-group mt-3">
-        <label for="nomeCliente">Cliente:</label>
-        <input type="text" id="nomeCliente" class="form-control" placeholder="Digite seu nome" required>
+            <div class="form-group mt-3">
+                <label for="nomeCliente">Cliente:</label>
+                <input type="text" id="nomeCliente" class="form-control" placeholder="Digite seu nome" required>
+            </div>
+
+            <div class="form-group">
+                <label for="numeroMesa">Mesa:</label>
+                <input type="text" id="numeroMesa" class="form-control" placeholder="Digite o número da mesa" required>
+            </div>
+
+            <button class="btn btn-primary mt-3" onclick="enviarPedido()">Enviar Pedido</button>
+        </div>
     </div>
-
-    <div class="form-group">
-        <label for="numeroMesa">Mesa:</label>
-        <input type="text" id="numeroMesa" class="form-control" placeholder="Digite o número da mesa" required>
-    </div>
-
-    <button class="btn btn-primary mt-3" onclick="enviarPedido()">Enviar Pedido</button>
-</div>
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
