mudanças nas fontes e cores

--- a/index.html
+++ b/index.html
@@ -25,29 +25,26 @@
                         <a class="nav-link" href="#" onclick="filtrarCategoria('Caldo')">Caldos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="filtrarCategoria('Lanche')">Lanches</a>
+                        <a class="nav-link" href="#" onclick="filtrarCategoria('Bebidas')">Bebidas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" onclick="filtrarCategoria('Espetinhos')">Espetinhos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="filtrarCategoria('Destiladas')">Destiladas</a>
+                    </li>
                     <!-- Dropdown para categorias adicionais -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                            Mais Categorias
+                            Mais Opções
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#" onclick="filtrarCategoria('Bebidas')">Bebidas</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="filtrarCategoria('Lanche')">Lanches</a></li>
                             <li><a class="dropdown-item" href="#" onclick="filtrarCategoria('Refrigerantes')">Refrigerantes</a></li>
                             <li><a class="dropdown-item" href="#" onclick="filtrarCategoria('Combos')">Combos</a></li>
-                            <li><a class="dropdown-item" href="#" onclick="filtrarCategoria('Destiladas')">Destiladas</a></li>
                         </ul>
                     </li>
                 </ul>
-                <!-- Barra de Pesquisa -->
-                <form class="d-flex" role="search">
-                    <input class="form-control mr-2" type="search" placeholder="Buscar no cardápio" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
             </div>
         </div>
     </nav>
