--- a/index.html
+++ b/index.html
@@ -66,19 +66,41 @@
             </a>
         </div>
 
-       <!-- Seção de pedidos -->
+<!-- Seção de pedidos -->
 <div id="pedido" class="mt-5 container">
     <div class="row">
         <!-- Campos de preenchimento à esquerda -->
         <div class="col-md-6">
             <h3>Informações do Pedido</h3>
+            
+            <!-- Nome do Cliente -->
             <div class="form-group mt-3">
                 <label for="nomeCliente">Cliente:</label>
                 <input type="text" id="nomeCliente" class="form-control" placeholder="Digite seu nome" required>
             </div>
+            
+            <!-- Número da Mesa -->
             <div class="form-group">
                 <label for="numeroMesa">Mesa:</label>
                 <input type="text" id="numeroMesa" class="form-control" placeholder="Digite o número da mesa" required>
+            </div>
+
+            <!-- Checkbox para pedido em casa -->
+            <div class="form-group mt-3">
+                <input type="checkbox" id="pedidoEmCasa" onclick="toggleEndereco()">
+                <label for="pedidoEmCasa">Em casa</label>
+            </div>
+
+            <!-- Campos de endereço (ocultos por padrão) -->
+            <div id="enderecoCliente" style="display: none;">
+                <div class="form-group mt-3">
+                    <label for="ruaCliente">Rua:</label>
+                    <input type="text" id="ruaCliente" class="form-control" placeholder="Digite o nome da rua">
+                </div>
+                <div class="form-group">
+                    <label for="numeroEndereco">Número:</label>
+                    <input type="text" id="numeroEndereco" class="form-control" placeholder="Digite o número">
+                </div>
             </div>
         </div>
 
