alterando preço de alguns itens

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <!-- Checkbox para pedido em casa -->
             <div class="form-group mt-3">
                 <input type="checkbox" id="pedidoEmCasa" onclick="toggleEndereco()">
-                <label for="pedidoEmCasa">Em casa</label>
+                <label for="pedidoEmCasa">Entrega em casa</label>
             </div>
 
             <!-- Campos de endereço (ocultos por padrão) -->
@@ -109,7 +109,7 @@
 
         <!-- Resumo do pedido à direita -->
         <div class="col-md-6">
-            <h3>Seu Pedido</h3>
+            <h3>Pedidos solicitados</h3>
             <ul id="lista-pedido" class="list-group">
                 <!-- Itens selecionados vão aparecer aqui -->
             </ul>
@@ -119,7 +119,7 @@
     <!-- Linha para o botão de enviar, fica centralizado abaixo da seção em telas menores -->
     <div class="row">
         <div class="col-12 text-center mt-3">
-            <button class="btn btn-primary" onclick="enviarPedido()">Enviar Pedido</button>
+            <button class="btn btn-primary" onclick="enviarPedido()">Solicitar Pedido</button>
         </div>
     </div>
 </div>
