--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
                     <label for="ruaCliente">Rua:</label>
                     <input type="text" id="ruaCliente" class="form-control" placeholder="Digite o nome da rua">
                 </div>
+                <div class="form-group mt-3">
+                    <label for="complemento">Ponto de referência:</label>
+                    <input type="text" id="complemento" class="form-control" placeholder="Digite um ponto de referência">
+                </div>
                 <div class="form-group">
                     <label for="numeroEndereco">Número:</label>
                     <input type="text" id="numeroEndereco" class="form-control" placeholder="Digite o número">
