--- a/index.html
+++ b/index.html
@@ -89,10 +89,12 @@
             </div>
 
             <!-- Checkbox para pedido em casa -->
-            <div class="form-group mt-3">
-                <input type="checkbox" id="pedidoEmCasa" onclick="toggleEndereco()">
-                <label for="pedidoEmCasa">Entrega em casa</label>
-            </div>
+    <div class="form-group mt-3">
+    <input type="checkbox" id="pedidoEmCasa" onclick="toggleEndereco(); exibirTaxaEntrega();">
+    <label for="pedidoEmCasa">Entrega em casa</label>
+    <!-- Texto pequeno para taxa de entrega -->
+    <p id="textoTaxaEntrega" style="display: none; font-size: 0.8em; color: black; margin-top: 5px; font-weight: bolder;">A taxa para entrega é de R$ 3,00.</p>
+    </div>
 
             <!-- Campos de endereço (ocultos por padrão) -->
             <div id="enderecoCliente" style="display: none;">
@@ -100,13 +102,13 @@
                     <label for="ruaCliente">Rua:</label>
                     <input type="text" id="ruaCliente" class="form-control" placeholder="Digite o nome da rua">
                 </div>
-                <div class="form-group mt-3">
-                    <label for="complemento">Ponto de referência:</label>
-                    <input type="text" id="complemento" class="form-control" placeholder="Digite um ponto de referência">
-                </div>
                 <div class="form-group">
                     <label for="numeroEndereco">Número:</label>
                     <input type="text" id="numeroEndereco" class="form-control" placeholder="Digite o número">
+                </div>
+                <div class="form-group mt-3">
+                    <label for="complemento">Ponto de referência:</label>
+                    <input type="text" id="complemento" class="form-control" placeholder="Digite um ponto de referência">
                 </div>
             </div>
         </div>
