alterado margin do carrossel

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         <!-- Carrossel de itens do cardápio -->
         <div id="menu-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" id="menu">
-                <!-- Itens do carrossel serão inseridos aqui dinamicamente -->
+                <div id="slide">
+                     <!-- Itens do carrossel serão inseridos aqui dinamicamente -->
+                </div>
             </div>
             <a class="carousel-control-prev" href="#menu-carousel" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
